--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<div class="hello">hello</div>
+
 </body>
 
 </html>
