--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 				<span>Garmin, Polar, Suunto</span>
 			</div>
 			<div class="header__contacts">
-				<a href="+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+				<a href="+74999228974" class="header__phone header__phone__mobile">+7 (499) 922-89-74</a>
 				<button class="button">заказать звонок</button>
 			</div>
 		</header>
@@ -57,6 +57,33 @@
 		</div>
 	</div>
 	
+</div>
+<div class="advantage">
+	<div class="conteiner">
+		<h2 class="advantage__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+		<div class="advantage__blocks">
+			<div class="advantage__block">
+				<img src="icons/cup.png" alt="cup">
+				<div class="advantage__caption">Делимся опытом</div>
+				<div class="advantage__comment">Наши сотрудники всегда готовы поделиться своим опытом, 
+					так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+			</div>
+			<div class="advantage__block">
+				<img src="icons/heart.png" alt="heart">
+				<div class="advantage__caption">Заботимся о здоровье</div>
+				<div class="advantage__comment">Мы работаем для того, 
+					чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+			</div>
+			<div class="advantage__block">
+				<img src="icons/shoe.png" alt="shoe">
+				<div class="advantage__caption">Учим бегать</div>
+				<div class="advantage__comment">Помогаем с обучением 
+					правильной технике бега! 
+					Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 </body>
 
