--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 				<span>Garmin, Polar, Suunto</span>
 			</div>
 			<div class="header__contacts">
-				<a href="+74999228974" class="header__phone header__phone__mobile">+7 (499) 922-89-74</a>
+				<a href="+74999228974" class="header__phone header__phone-mobile">+7 (499) 922-89-74</a>
 				<button class="button">заказать звонок</button>
 			</div>
 		</header>
@@ -60,7 +60,7 @@
 </div>
 <div class="advantage">
 	<div class="conteiner">
-		<h2 class="advantage__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+		<h2 class="title title-mobile">НАШИ ПРЕИМУЩЕСТВА</h2>
 		<div class="advantage__blocks">
 			<div class="advantage__block">
 				<img src="icons/cup.png" alt="cup">
@@ -83,6 +83,24 @@
 				</div>
 			</div>
 		</div>
+	</div>
+</div>
+<div class="consultation">
+	<div class="conteiner">
+		<h2 class="title title__left title__left-mobile">
+			Получите бесплатную консультацию<br>
+			по подбору пульсометра
+		</h2>
+		<div class="consultation__descr">
+			Просто заполните форму заявки<br>
+			и мы перезвоним вам в течении 10 минут
+		</div>
+		<form action="#" class="feed-form">
+			<input name="name" required placeholder="Ваше имя" type="text">
+			<input name="phone" required placeholder="Ваше телефон" type="number">
+			<input name="email" required placeholder="Ваше E-mail" type="email">
+			<button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
+		</form>
 	</div>
 </div>
 </body>
