Свёрстана карусель css+js

--- a/src/index.html
+++ b/src/index.html
@@ -7,102 +7,126 @@
 	<title>Pulse</title>
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.min.css">
 
 </head>
 
 <body>
-<div class="promo">
-	<div class="conteiner">
-		<header class="header">
-			<a href="#" class="header__logo">
-				<img src="img/logo_pulse.png" alt="logo">
-			</a>
-			<div class="header__oficial">
-				Официальный представитель
-				<span>Garmin, Polar, Suunto</span>
-			</div>
-			<div class="header__contacts">
-				<a href="+74999228974" class="header__phone header__phone-mobile">+7 (499) 922-89-74</a>
-				<button class="button">заказать звонок</button>
-			</div>
-		</header>
+	<section class="promo">
+		<div class="conteiner">
+			<header class="header">
+				<a href="#" class="header__logo">
+					<img src="img/logo_pulse.png" alt="logo">
+				</a>
+				<div class="header__oficial">
+					Официальный представитель
+					<span>Garmin, Polar, Suunto</span>
+				</div>
+				<div class="header__contacts">
+					<a href="+74999228974" class="header__phone header__phone-mobile">+7 (499) 922-89-74</a>
+					<button class="button">заказать звонок</button>
+				</div>
+			</header>
 
-		<div class="promo__wrapper">
-			<h1 class="promo__header">Подбор пульсометра</h1>
-			<h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
-	
-			<div class="promo__icons">
-				<div class="promo__icon">
-					<img src="icons/stopwatch.png" alt="stopwatch">
-						Время подбора:
-						10 минут
+			<div class="promo__wrapper">
+				<h1 class="promo__header">Подбор пульсометра</h1>
+				<h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+		
+				<div class="promo__icons">
+					<div class="promo__icon">
+						<img src="icons/stopwatch.png" alt="stopwatch">
+							Время подбора:
+							10 минут
+					</div>
+					<div class="promo__icon">
+						<img src="icons/hand_cart.png" alt="hand cart">
+							Бесплатная
+							доставка
+					</div>
+					<div class="promo__icon">
+						<img src="icons/messages.png" alt="messages">
+							Ответим
+							на все вопросы
+					</div>
 				</div>
-				<div class="promo__icon">
-					<img src="icons/hand_cart.png" alt="hand cart">
-						Бесплатная
-						доставка
-				</div>
-				<div class="promo__icon">
-					<img src="icons/messages.png" alt="messages">
-						Ответим
-						на все вопросы
-				</div>
-			</div>
-			<button class="button button-main">заказать кОНСУЛЬТАЦИЮ</button>
-			<div class="promo__link">
-				или
-				<a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
-			</div>
-		</div>
-	</div>
-	
-</div>
-<div class="advantage">
-	<div class="conteiner">
-		<h2 class="title title-mobile">НАШИ ПРЕИМУЩЕСТВА</h2>
-		<div class="advantage__blocks">
-			<div class="advantage__block">
-				<img src="icons/cup.png" alt="cup">
-				<div class="advantage__caption">Делимся опытом</div>
-				<div class="advantage__comment">Наши сотрудники всегда готовы поделиться своим опытом, 
-					так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
-			</div>
-			<div class="advantage__block">
-				<img src="icons/heart.png" alt="heart">
-				<div class="advantage__caption">Заботимся о здоровье</div>
-				<div class="advantage__comment">Мы работаем для того, 
-					чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
-			</div>
-			<div class="advantage__block">
-				<img src="icons/shoe.png" alt="shoe">
-				<div class="advantage__caption">Учим бегать</div>
-				<div class="advantage__comment">Помогаем с обучением 
-					правильной технике бега! 
-					Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a>
+				<button class="button button-main">заказать кОНСУЛЬТАЦИЮ</button>
+				<div class="promo__link">
+					или
+					<a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
 				</div>
 			</div>
 		</div>
-	</div>
-</div>
-<div class="consultation">
-	<div class="conteiner">
-		<h2 class="title title__left title__left-mobile">
-			Получите бесплатную консультацию<br>
-			по подбору пульсометра
-		</h2>
-		<div class="consultation__descr">
-			Просто заполните форму заявки<br>
-			и мы перезвоним вам в течении 10 минут
+		
+	</section>
+	<section class="advantage">
+		<div class="conteiner">
+			<h2 class="title title-mobile">НАШИ ПРЕИМУЩЕСТВА</h2>
+			<div class="advantage__blocks">
+				<div class="advantage__block">
+					<img src="icons/cup.png" alt="cup">
+					<div class="advantage__caption">Делимся опытом</div>
+					<div class="advantage__comment">Наши сотрудники всегда готовы поделиться своим опытом, 
+						так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+				</div>
+				<div class="advantage__block">
+					<img src="icons/heart.png" alt="heart">
+					<div class="advantage__caption">Заботимся о здоровье</div>
+					<div class="advantage__comment">Мы работаем для того, 
+						чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+				</div>
+				<div class="advantage__block">
+					<img src="icons/shoe.png" alt="shoe">
+					<div class="advantage__caption">Учим бегать</div>
+					<div class="advantage__comment">Помогаем с обучением 
+						правильной технике бега! 
+						Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a>
+					</div>
+				</div>
+			</div>
 		</div>
-		<form action="#" class="feed-form">
-			<input name="name" required placeholder="Ваше имя" type="text">
-			<input name="phone" required placeholder="Ваше телефон" type="number">
-			<input name="email" required placeholder="Ваше E-mail" type="email">
-			<button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
-		</form>
-	</div>
-</div>
+	</section>
+
+	<section class="consultation">
+		<div class="conteiner">
+			<h2 class="title title__left title__left-mobile">
+				Получите бесплатную консультацию<br>
+				по подбору пульсометра
+			</h2>
+			<div class="consultation__descr">
+				Просто заполните форму заявки<br>
+				и мы перезвоним вам в течении 10 минут
+			</div>
+			<form action="#" class="feed-form">
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваше телефон" type="number">
+				<input name="email" required placeholder="Ваше E-mail" type="email">
+				<button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
+			</form>
+		</div>
+	</section>
+
+	<section class="carousel">
+		<div class="conteiner">
+			<div class="carousel__inner">
+				<div>
+					<img src="img/whatch_main.jpg" alt="slide_1">
+				</div>
+				<div>
+					<img src="img/whatch_polar_trio.jpg" alt="slide_2">
+				</div>
+				<div>
+					<img src="img/whatch_polar_triple.jpg" alt="slide_3">
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
