Футер готов и адаптирован

--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,7 @@
 					<div class="comment__content">
 						<div class="comment__name">Ирина Иванченко</div>
 						<div class="comment__marathon">2 полумарафона</div>
-						<div class="comment__descr">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же<br><br>Новые цели - новый гаджет!<br><br>Спасибо, RunSmart!</div>
+						<div class="comment__descr">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же<br><br>Новые цели - новый гаджет!<br> >Спасибо, RunSmart!</div>
 					</div>
 				</div>
 				<div class="comment">
@@ -420,6 +420,19 @@
 			</div>
 		</div>
 	</section>
+
+	<footer class="footer">
+		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aaeb1aebbb2b7a2ea56249de50064a7a77e630238282f7ea19b8e7a771c4c36cc&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
+		<div class="footer__info">
+			<address class="footer__adress">Москва, Мясницкий проезд, д.3с1</address>
+			<a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
+			<div class="footer__social">
+				<a href="#" class="footer__social-item"><img src="icons/facebook.png" alt="facebook"></a>
+				<a href="#" class="footer__social-item"><img src="icons/instagram.png" alt="instagram"></a>
+				<a href="#" class="footer__social-item"><img src="icons/pinterest.png" alt="pinterest"></a>
+			</div>
+		</div>
+	</footer>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
