--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 				</div>
 				<div class="header__contacts">
 					<a href="+74999228974" class="header__phone header__phone-mobile">+7 (499) 922-89-74</a>
-					<button class="button">заказать звонок</button>
+					<button class="button" data-modal="consultation">заказать звонок</button>
 				</div>
 			</header>
 
@@ -50,7 +50,7 @@
 							на все вопросы
 					</div>
 				</div>
-				<button class="button button-main">заказать кОНСУЛЬТАЦИЮ</button>
+				<button data-modal="consultation" class="button button-main">заказать кОНСУЛЬТАЦИЮ</button>
 				<div class="promo__link">
 					или
 					<a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -136,7 +136,7 @@
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__content catalog-item__content-active">
 							<img src="img/whatch_small.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
@@ -190,7 +190,7 @@
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__content catalog-item__content-active">
 							<img src="img/whatch_small.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
@@ -217,7 +217,7 @@
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__content catalog-item__content-active">
 							<img src="img/whatch_small.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
@@ -244,7 +244,7 @@
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__content catalog-item__content-active">
 							<img src="img/whatch_small.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
@@ -356,7 +356,7 @@
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__content catalog-item__content-active">
 							<img src="img/whatch_small.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
@@ -433,6 +433,41 @@
 			</div>
 		</div>
 	</footer>
+	
+	<div class="overlay">
+		<div class="modal" id="consultation">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">Просто заполните форму заявки</div>
+			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+			<form action="#" class="feed-form feed-form-mt25">
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваше телефон" type="number">
+				<input name="email" required placeholder="Ваше E-mail" type="email">
+				<button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
+			</form>
+		</div>
+
+		<div class="modal" id="order">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">Ваш заказ:</div>
+			<div class="modal__descr">Пульсометр Polar FT1</div>
+			<form action="#" class="feed-form feed-form-mt25">
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваше телефон" type="number">
+				<input name="email" required placeholder="Ваше E-mail" type="email">
+				<button class="button button__submit">Купить</button>
+			</form>
+		</div>
+
+		<div class="modal modal-mini" id="thanks">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">Спасибо за вашу заявку!</div>
+			<div class="modal__descr">Наш менеджер свяжется с вами 
+			в ближайшее время!</div>
+		</div>
+
+
+	</div>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
