--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 				Просто заполните форму заявки<br>
 				и мы перезвоним вам в течении 10 минут
 			</div>
-			<form action="#" class="feed-form">
+			<form id="consultation-form" action="#" class="feed-form">
 				<input name="name" required placeholder="Ваше имя" type="text">
 				<input name="phone" required placeholder="Ваше телефон" type="number">
 				<input name="email" required placeholder="Ваше E-mail" type="email">
@@ -440,9 +440,9 @@
 			<div class="modal__subtitle">Просто заполните форму заявки</div>
 			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
 			<form action="#" class="feed-form feed-form-mt25">
-				<input name="name" required placeholder="Ваше имя" type="text">
-				<input name="phone" required placeholder="Ваше телефон" type="number">
-				<input name="email" required placeholder="Ваше E-mail" type="email">
+				<input name="name" placeholder="Ваше имя" type="text">
+				<input name="phone" placeholder="Ваше телефон" type="number">
+				<input name="email" placeholder="Ваше E-mail" type="email">
 				<button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
 			</form>
 		</div>
@@ -472,6 +472,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
+	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
