--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
 			</div>
 			<form id="consultation-form" action="#" class="feed-form">
 				<input name="name" required placeholder="Ваше имя" type="text">
-				<input name="phone" required placeholder="Ваше телефон" type="number">
+				<input name="phone" required placeholder="Ваше телефон">
 				<input name="email" required placeholder="Ваше E-mail" type="email">
 				<button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
 			</form>
@@ -441,7 +441,7 @@
 			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
 			<form action="#" class="feed-form feed-form-mt25">
 				<input name="name" placeholder="Ваше имя" type="text">
-				<input name="phone" placeholder="Ваше телефон" type="number">
+				<input name="phone" placeholder="Ваше телефон">
 				<input name="email" placeholder="Ваше E-mail" type="email">
 				<button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
 			</form>
@@ -453,7 +453,7 @@
 			<div class="modal__descr">Пульсометр Polar FT1</div>
 			<form action="#" class="feed-form feed-form-mt25">
 				<input name="name" required placeholder="Ваше имя" type="text">
-				<input name="phone" required placeholder="Ваше телефон" type="number">
+				<input name="phone" required placeholder="Ваше телефон">
 				<input name="email" required placeholder="Ваше E-mail" type="email">
 				<button class="button button__submit">Купить</button>
 			</form>
@@ -473,6 +473,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
+	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
