осталось проверить скорость загрузки

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,13 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.min.css">
 
 </head>
 
 <body>
-	<section class="promo">
+	<section id="up" class="promo">
 		<div class="conteiner">
 			<header class="header">
 				<a href="#" class="header__logo">
@@ -64,19 +65,19 @@
 			<h2 class="title title-mobile">НАШИ ПРЕИМУЩЕСТВА</h2>
 			<div class="advantage__blocks">
 				<div class="advantage__block">
-					<img src="icons/cup.png" alt="cup">
+					<img src="icons/cup.png" alt="cup" class="advantage__icon">
 					<div class="advantage__caption">Делимся опытом</div>
 					<div class="advantage__comment">Наши сотрудники всегда готовы поделиться своим опытом, 
 						так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
 				</div>
 				<div class="advantage__block">
-					<img src="icons/heart.png" alt="heart">
+					<img src="icons/heart.png" alt="heart" class="advantage__icon advantage__icon-animated">
 					<div class="advantage__caption">Заботимся о здоровье</div>
 					<div class="advantage__comment">Мы работаем для того, 
 						чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
 				</div>
 				<div class="advantage__block">
-					<img src="icons/shoe.png" alt="shoe">
+					<img src="icons/shoe.png" alt="shoe" class="advantage__icon">
 					<div class="advantage__caption">Учим бегать</div>
 					<div class="advantage__comment">Помогаем с обучением 
 						правильной технике бега! 
@@ -106,7 +107,7 @@
 		</div>
 	</section>
 
-	<section class="carousel">
+	<div class="carousel">
 		<div class="conteiner">
 			<div class="carousel__inner">
 				<div>
@@ -120,7 +121,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 
 	<section class="catalog">
 		<div class="conteiner">
@@ -140,13 +141,15 @@
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
-						<ul class="catalog-item__list ">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+						<div class="catalog-item__list ">
+							<ul>
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
 							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
+						</div>
 					</div>
 					<hr>
 
@@ -167,13 +170,15 @@
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
-						<ul class="catalog-item__list">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+						<div class="catalog-item__list">
+							<ul>
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
 							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
+						</div>
 					</div>
 					<hr>
 
@@ -194,13 +199,15 @@
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
-						<ul class="catalog-item__list">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+						<div class="catalog-item__list">
+							<ul>
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
 							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
+						</div>
 					</div>
 					<hr>
 
@@ -221,13 +228,15 @@
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
-						<ul class="catalog-item__list">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+						<div class="catalog-item__list">
+							<ul>
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
 							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
+						</div>
 					</div>
 					<hr>
 
@@ -248,13 +257,15 @@
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
-						<ul class="catalog-item__list">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+						<div class="catalog-item__list">
+							<ul>
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
 							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
+						</div>
 					</div>
 					<hr>
 
@@ -275,42 +286,15 @@
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
-						<ul class="catalog-item__list">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+						<div class="catalog-item__list">
+							<ul>
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
 							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
-					</div>
-					<hr>
-
-					<div class="catalog-item__footer">
-						<div class="catalog-item__prices">
-							<div class="catalog-item__old-price">4 750 руб.</div>
-							<div class="catalog-item__price">4 500 руб.</div>
 						</div>
-						<button class="button button-mini">КУПИТЬ</button>
-					</div>
-					
-				</div>
-			</div>
-			<div class="catalog__content">
-				<div class="catalog-item">
-					<div class="catalog-item__wrapper">
-						<div class="catalog-item__content catalog-item__content-active">
-							<img src="img/whatch_small.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
-							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
-						</div>
-						<ul class="catalog-item__list">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
-							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
 					</div>
 					<hr>
 
@@ -333,13 +317,46 @@
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
-						<ul class="catalog-item__list">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+						<div class="catalog-item__list">
+							<ul>
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
 							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
+						</div>
+					</div>
+					<hr>
+
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button-mini">КУПИТЬ</button>
+					</div>
+					
+				</div>
+			</div>
+			<div class="catalog__content">
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content-active">
+							<img src="img/whatch_small.jpg" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<div class="catalog-item__list">
+							<ul>
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
+							<a href="#" class="catalog-item__back">назад</a>
+						</div>
 					</div>
 					<hr>
 
@@ -360,13 +377,15 @@
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
-						<ul class="catalog-item__list">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+						<div class="catalog-item__list">
+							<ul>
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
 							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
+						</div>
 					</div>
 					<hr>
 
@@ -387,7 +406,7 @@
 		<div class="conteiner">
 			<h2 class="title">отзывы клиентов</h2>
 			<div class="comments__wrapper">
-				<div class="comment">
+				<div class="comment animate__fadeInUp animate__animated wow" data-wow-duration="2s" data-wow-delay="1s">
 					<div class="comment__foto">
 						<img src="img/irina.jpg" alt="Ирина">
 					</div>
@@ -397,7 +416,7 @@
 						<div class="comment__descr">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же<br><br>Новые цели - новый гаджет!<br> >Спасибо, RunSmart!</div>
 					</div>
 				</div>
-				<div class="comment">
+				<div class="comment animate__fadeInUp animate__animated wow" data-wow-duration="2s" data-wow-delay="1s">
 					<div class="comment__foto">
 						<img src="img/ivan.jpg" alt="Иван">
 					</div>
@@ -407,7 +426,7 @@
 						<div class="comment__descr">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд. <br><br>   С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
 					</div>
 				</div>
-				<div class="comment">
+				<div class="comment animate__fadeInUp animate__animated wow" data-wow-duration="2s" data-wow-delay="1s">
 					<div class="comment__foto">
 						<img src="img/yulia.jpg" alt="Юлия">
 					</div>
@@ -422,7 +441,7 @@
 	</section>
 
 	<footer class="footer">
-		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aaeb1aebbb2b7a2ea56249de50064a7a77e630238282f7ea19b8e7a771c4c36cc&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
+		<script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aaeb1aebbb2b7a2ea56249de50064a7a77e630238282f7ea19b8e7a771c4c36cc&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
 		<div class="footer__info">
 			<address class="footer__adress">Москва, Мясницкий проезд, д.3с1</address>
 			<a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
@@ -465,15 +484,18 @@
 			<div class="modal__descr">Наш менеджер свяжется с вами 
 			в ближайшее время!</div>
 		</div>
-
-
 	</div>
 
-	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<a href="#up" class="pageup">
+		<img src="icons/up.svg" alt="up">
+	</a>
+
+	<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
